<resources>
    <string name="app_name">CapStoneProject</string>
    <string name="title_home">Home</string>
    <string name="title_pantry">Pantry</string>
    <string name="title_search">Search</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_calendar">Calendar</string>
    <string name="see_all">See all</string>
    <string name="menuItem_home">Home</string>
    <string name="menuItem_search">Search</string>
    <string name="menuItem_collaborator">Add Person</string>
    <string name="menuItem_share">Share</string>
    <string name="menuItem_calendar">Month</string>
    <string name="menuItem_favorite">Favorite</string>
    <string name="menuItem_delete">Delete</string>
    <string name="favorites">Favorites</string>
    <string name="selected_recipes">Selected Recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>

</resources>