<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.geetha.capstoneproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_pantry"
            app:destination="@id/navigation_pantry" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pantry"
        android:name="com.geetha.capstoneproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_pantry"
        tools:layout="@layout/fragment_pantry" >
        <action
            android:id="@+id/action_navigation_pantry_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.geetha.capstoneproject.ui.notifications.NotificationsFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_shopping_list"
            app:destination="@id/navigation_shopping_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="com.geetha.capstoneproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_shopping_list"
        tools:layout="@layout/fragment_shopping_list" >
        <action
            android:id="@+id/action_navigation_shopping_list_to_navigation_calendar"
            app:destination="@id/navigation_calendar" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.geetha.capstoneproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>